--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,10 +11,28 @@ jobs:
     runs-on: windows
     steps:
       - name: RevisionRepo
-        run: se esta ejecutando el entorno
+        run: echo "se está ejecutando el entorno"
 
       - name: AnalisisRepo
-        run: se esta analizando el repositorio
+        run: echo "se está analizando el repositorio"
+
+      - name: preparar entorno
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+
+      - name: actualizar pip
+        run: |
+          python -m pip install --upgrade pip
+
+      - name: instalar dependencias
+        run: |
+          pip install -r requirements.txt
+
+      - name: ejecutar pruebas
+        run: |
+          python -m pytest
+
 
 ls -la
 
